--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,29 +3,28 @@ name: Deploy
 on:
   push:
     branches:
-    - master
+    - master   
 
 jobs:
   deploy_lambda:
     runs-on: ubuntu-latest
-    steps:
+    steps: 
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-      - name: Configure AWS Credentials
+        with:  
+          node-version: '16' 
+      - name: Configure AWS Credentials  
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ap-south-1
       - name: npm install
         env:
           CI: true
         run: |
-          npm ci
+          npm ci 
       - name: deploy
         run: |
-          npx ncc build index.js
-          zip -j deploy.zip ./dist/*
+          zip -j deploy.zip ./* #--> Zip the Code As we know lambda function accept the zip file.
           aws lambda update-function-code --function-name=local-backend --zip-file=fileb://deploy.zip
